feat(storage): add notification settings for specific user in group
